--- a/react-portfolio/src/components/Hero.css
+++ b/react-portfolio/src/components/Hero.css
@@ -22,7 +22,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.8);
 }
 
 .hero-img {
@@ -86,7 +86,7 @@
     font-weight: 100;
     letter-spacing: 0.5rem;
     text-transform: uppercase;
-    margin-bottom: 1rem;
+    margin: 1rem;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
     text-decoration: none;
@@ -131,6 +131,11 @@ Responsive Design
     .hero-text-contents h1{
         font-size: 1.8rem;
     }
+    .btn {
+        font-weight: 100;
+        letter-spacing: 0.2rem;
+        
+    }
 
 
 }
@@ -148,5 +153,11 @@ Responsive Design
 
     .hero-text-contents p {
         font-size: .6rem;
+    }
+
+    .btn {
+        font-weight: 100;
+        letter-spacing: 0.1rem;
+        margin: .3rem;    
     }
 }
