--- a/react-portfolio/src/components/Hero.css
+++ b/react-portfolio/src/components/Hero.css
@@ -53,7 +53,7 @@
 
 .hero-name {
     font-size: 2rem;
-    font-family: 'Montez', cursive;
+    font-family: 'Montserrat Alternates', sans-serif;
     font-weight: 100;
     letter-spacing: 0.5rem;
     text-transform: uppercase;
