--- a/react-portfolio/src/components/Hero.css
+++ b/react-portfolio/src/components/Hero.css
@@ -61,7 +61,7 @@
 }
 
 .hero-text-contents p {
-    font-size: .8rem;
+    font-size: 1rem;
     font-family: 'Montserrat Alternates', sans-serif;
     font-weight: 100;
     letter-spacing: 0.5rem;
