--- a/react-portfolio/src/components/Footer.css
+++ b/react-portfolio/src/components/Footer.css
@@ -9,8 +9,6 @@
     padding:  5rem 0;
     margin-top: 20px;
     background-color: rgb(20, 19, 19, 0.7);
-
-
 }
 
 .footer-right {
@@ -45,7 +43,6 @@
     position: relative;
     bottom: 1.3rem;
     left: 1.5rem;
-
 }
 
 .footer-left {
@@ -67,21 +64,25 @@
     left: 1.5rem;
     line-height: 20px;
     margin: 1rem;
-
 }
 
 
 /*----------------------------------------------------------
 Responsive Design
 -----------------------------------------------------------*/
+@media screen and (max-width: 1024px) {
+    .footer-right p {
+        right: 50px;
+        position: relative;
+    }    
+}
 
 @media screen and (max-width: 768px) {
 
     .footer-right p {
         font-size: 1rem;
 
-    }
-      
+    }     
 }
 
 @media screen and (max-width: 475px) {
@@ -113,9 +114,7 @@ Responsive Design
         font-size: 1rem;
         padding: 0;
         margin: 0;
-    }
-
- 
+    } 
 }
 
 
