--- a/react-portfolio/src/components/Hero2.css
+++ b/react-portfolio/src/components/Hero2.css
@@ -56,6 +56,7 @@
     letter-spacing: 0.5rem;
     text-transform: uppercase;
     margin-bottom: 1rem;
+    padding: 1rem;
 }
 
 /*----------------------------------------------------------
