added links to portfolio

--- a/react-portfolio/src/components/Portfolio.css
+++ b/react-portfolio/src/components/Portfolio.css
@@ -1,3 +1,8 @@
-div {
-    font-size: large;
+.project-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 0 auto;
+  max-width: 1000px;
+  padding: 20px;
 }
