--- a/react-portfolio/src/components/Portfolio.css
+++ b/react-portfolio/src/components/Portfolio.css
@@ -1,31 +1,53 @@
 .project-wrapper {
-  display: grid;
-  /* flex-wrap: wrap; */
-  /* justify-content: space-between; */
-  margin: 0 auto;
-  /* max-width: 1000px; */
-  /* padding: 20px; */
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
+    margin: 0 auto;
+    max-width: 100%;
+    padding: 0 20px;
+    /* padding: 20px; */
+    position: relative;
+    background-color: rgba(0, 0, 0, 0.8);;
 }
 
 .project {
-  border: 1px solid rgb(255, 250, 250);
-  border-radius: 5px;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  margin: 10px;
-  padding: 10px;
-  width: 300px;
+    border: 1px solid rgb(255, 250, 250);
+    border-radius: 5px;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 10px;
+    padding: 10px;
+    max-width: 100%;
+    min-height: 100%;
 }
 
 .project img {
-  border-radius: 5px;
-  height: 200px;
-  width: 300px;
+    border-radius: 5px;
+    height: 200px;
+    width: 300px;
 }
 
 .project-card-img {
-  display: flex;
-  justify-content: center;
+    display: flex;
+    justify-content: center;
+}
+
+/*----------------------------------------------------------
+Responsive Design
+-----------------------------------------------------------*/
+
+@media screen and (max-width: 768px) {
+    .project-wrapper {
+        grid-template-columns: repeat(2, 1fr);
+        flex-direction: row;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .project-wrapper {
+        grid-template-columns: 1fr;
+        flex-direction: column;
+    }
 }
